test some fonts

--- a/app/index.html
+++ b/app/index.html
@@ -3,20 +3,98 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="app/styles.css">
   <script src="app/index.js"></script>
+  <link rel="stylesheet" href="app/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet"> -->
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Wallpoet&display=swap" rel="stylesheet"> -->
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css2?family=Cute+Font&display=swap" rel="stylesheet">
   <title>PC Info</title>
 </head>
 <body>
   <main>
     <section class="component">
-      <div class="component-title"></div>
-      <div class="component-sensor">
-        <div class="component-sensor-name"></div>
-        <div class="component-sensor-value"></div>
-        <div class="component-sensor-other">
-          <div class="component-sensor-max"></div>
-          <div class="component-sensor-min"></div>
+      <div class="component-title">CPU (AMD Ryzen 7800x)</div>
+      <div class="component-sensors">
+        <div class="component-sensor">
+          <div class="component-sensor-value">23.4%</div>
+          <div class="component-sensor-other">
+            <div class="component-sensor-min">0.1%</div>
+            <div class="component-sensor-max">56.7%</div>
+          </div>
+        </div>
+
+        <div class="component-sensor">
+          <div class="component-sensor-value">45.6°C</div>
+          <div class="component-sensor-other">
+            <div class="component-sensor-min">2.3°C</div>
+            <div class="component-sensor-max">78.9°C</div>
+          </div>
+        </div>
+
+        <div class="component-sensor">
+          <div class="component-sensor-value">30.1W</div>
+          <div class="component-sensor-other">
+            <div class="component-sensor-min">24.5W</div>
+            <div class="component-sensor-max">68.7W</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="component">
+      <div class="component-title">GPU (NVIDIA RTX 2060)</div>
+      <div class="component-sensors">
+        <div class="component-sensor">
+          <div class="component-sensor-value">23.4%</div>
+          <div class="component-sensor-other">
+            <div class="component-sensor-min">0.1%</div>
+            <div class="component-sensor-max">56.7%</div>
+          </div>
+        </div>
+
+        <div class="component-sensor">
+          <div class="component-sensor-value">45.6°C</div>
+          <div class="component-sensor-other">
+            <div class="component-sensor-min">2.3°C</div>
+            <div class="component-sensor-max">78.9°C</div>
+          </div>
+        </div>
+
+        <div class="component-sensor">
+          <div class="component-sensor-value">30.1W</div>
+          <div class="component-sensor-other">
+            <div class="component-sensor-min">24.5W</div>
+            <div class="component-sensor-max">68.7W</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="component">
+      <div class="component-title">RAM</div>
+      <div class="component-sensors">
+        <div class="component-sensor">
+          <div class="component-sensor-value">23.4%</div>
+          <div class="component-sensor-other">
+            <div class="component-sensor-min">0.1%</div>
+            <div class="component-sensor-max">56.7%</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="component">
+      <div class="component-title">VRAM</div>
+      <div class="component-sensors">
+        <div class="component-sensor">
+          <div class="component-sensor-value">23.4%</div>
+          <div class="component-sensor-other">
+            <div class="component-sensor-min">0.1%</div>
+            <div class="component-sensor-max">56.7%</div>
+          </div>
         </div>
       </div>
     </section>
