--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="app/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Wallpoet&display=swap" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Wallpoet&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cute+Font&display=swap" rel="stylesheet">
   <title>PC Info</title>
 </head>
@@ -19,7 +19,44 @@
       <div class="component-title">CPU (AMD Ryzen 7800x)</div>
       <div class="component-sensors">
         <div class="component-sensor">
-          <div class="component-sensor-value">23.4%</div>
+          <div class="component-sensor-history" id="history">
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+          </div>
+          <div class="component-sensor-value">
+            <div class="component-vumeter">
+              <div class="component-vumeter-needle"></div>
+            </div> 
+            100.0%
+          </div>
           <div class="component-sensor-other">
             <div class="component-sensor-min">0.1%</div>
             <div class="component-sensor-max">56.7%</div>
@@ -27,18 +64,18 @@
         </div>
 
         <div class="component-sensor">
-          <div class="component-sensor-value">45.6°C</div>
+          <div class="component-sensor-value">145.6°C</div>
           <div class="component-sensor-other">
             <div class="component-sensor-min">2.3°C</div>
-            <div class="component-sensor-max">78.9°C</div>
+            <div class="component-sensor-max">100.1°C</div>
           </div>
         </div>
 
         <div class="component-sensor">
-          <div class="component-sensor-value">30.1W</div>
+          <div class="component-sensor-value">230.1W</div>
           <div class="component-sensor-other">
             <div class="component-sensor-min">24.5W</div>
-            <div class="component-sensor-max">68.7W</div>
+            <div class="component-sensor-max">168.7W</div>
           </div>
         </div>
       </div>
