--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="app/index.js"></script>
-  <link rel="stylesheet" href="app/styles.css">
+  <!-- <link rel="stylesheet" href="app/styles.css"> -->
+  <link rel="stylesheet" href="app/theme2.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
@@ -19,6 +20,9 @@
       <div class="component-title">CPU (AMD Ryzen 7800x)</div>
       <div class="component-sensors">
         <div class="component-sensor">
+          <div class="component-vumeter">
+            <div class="component-vumeter-needle" id="needle"></div>
+          </div>
           <div class="component-sensor-history" id="history">
             <div class="component-sensor-history-item"></div>
             <div class="component-sensor-history-item"></div>
@@ -51,11 +55,76 @@
             <div class="component-sensor-history-item"></div>
             <div class="component-sensor-history-item"></div>
           </div>
-          <div class="component-sensor-value">
-            <div class="component-vumeter">
-              <div class="component-vumeter-needle"></div>
-            </div> 
-            100.0%
+          <div class="component-sensor-max">56.7%</div>
+          <div class="component-sensor-value" id="value">
+            <span>
+              100.0%
+            </span> 
+          </div>
+          <div class="component-sensor-min">0.1%</div>
+          </div>
+        </div>
+
+        <div class="component-sensor">
+          <div class="component-sensor-value">145.6°C</div>
+          <div class="component-sensor-other">
+            <div class="component-sensor-min">2.3°C</div>
+            <div class="component-sensor-max">100.1°C</div>
+          </div>
+        </div>
+
+        <div class="component-sensor">
+          <div class="component-sensor-value">230.1W</div>
+          <div class="component-sensor-other">
+            <div class="component-sensor-min">24.5W</div>
+            <div class="component-sensor-max">168.7W</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="component">
+      <div class="component-title">CPU (AMD Ryzen 7800x)</div>
+      <div class="component-sensors">
+        <div class="component-sensor">
+          <div class="component-vumeter">
+            <div class="component-vumeter-needle" id="needle"></div>
+          </div>
+          <div class="component-sensor-history" id="history">
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+          </div>
+          <div class="component-sensor-value" id="value">
+            <span>
+              100.0%
+            </span> 
           </div>
           <div class="component-sensor-other">
             <div class="component-sensor-min">0.1%</div>
