--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="app/index.js"></script>
-  <!-- <link rel="stylesheet" href="app/styles.css"> -->
-  <link rel="stylesheet" href="app/theme2.css">
+  <link rel="stylesheet" href="app/styles.css">
+  <!-- <link rel="stylesheet" href="app/theme2.css"> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
       <div class="component-sensors">
         <div class="component-sensor">
           <div class="component-vumeter">
-            <div class="component-vumeter-needle" id="needle"></div>
+            <div class="component-vumeter-needle" id="needle_2"></div>
           </div>
           <div class="component-sensor-history" id="history">
             <div class="component-sensor-history-item"></div>
@@ -64,22 +64,6 @@
           <div class="component-sensor-min">0.1%</div>
           </div>
         </div>
-
-        <div class="component-sensor">
-          <div class="component-sensor-value">145.6°C</div>
-          <div class="component-sensor-other">
-            <div class="component-sensor-min">2.3°C</div>
-            <div class="component-sensor-max">100.1°C</div>
-          </div>
-        </div>
-
-        <div class="component-sensor">
-          <div class="component-sensor-value">230.1W</div>
-          <div class="component-sensor-other">
-            <div class="component-sensor-min">24.5W</div>
-            <div class="component-sensor-max">168.7W</div>
-          </div>
-        </div>
       </div>
     </section>
     <section class="component">
@@ -90,6 +74,16 @@
             <div class="component-vumeter-needle" id="needle"></div>
           </div>
           <div class="component-sensor-history" id="history">
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
             <div class="component-sensor-history-item"></div>
             <div class="component-sensor-history-item"></div>
             <div class="component-sensor-history-item"></div>
