--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Wallpoet&display=swap" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> -->
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css2?family=Cute+Font&display=swap" rel="stylesheet">
   <title>PC Info</title>
 </head>
@@ -18,79 +17,66 @@
     <section class="component">
       <div class="component-title">CPU (AMD Ryzen 7800x)</div>
       <div class="component-sensors">
-        <div class="component-sensor">
-          <div class="component-sensor-value">23.4%</div>
-          <div class="component-sensor-other">
-            <div class="component-sensor-min">0.1%</div>
-            <div class="component-sensor-max">56.7%</div>
-          </div>
-        </div>
 
         <div class="component-sensor">
-          <div class="component-sensor-value">45.6°C</div>
-          <div class="component-sensor-other">
-            <div class="component-sensor-min">2.3°C</div>
-            <div class="component-sensor-max">78.9°C</div>
+          <div class="component-sensor-vumeter">
+            <div class="component-sensor-vumeter-needle"></div>
+          </div> 
+          <div class="component-sensor-history" id="history">
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
+            <div class="component-sensor-history-item"></div>
           </div>
-        </div>
-
-        <div class="component-sensor">
-          <div class="component-sensor-value">30.1W</div>
-          <div class="component-sensor-other">
-            <div class="component-sensor-min">24.5W</div>
-            <div class="component-sensor-max">68.7W</div>
+          <div class="component-sensor-value">
+            100.0%
           </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="component">
-      <div class="component-title">GPU (NVIDIA RTX 2060)</div>
-      <div class="component-sensors">
-        <div class="component-sensor">
-          <div class="component-sensor-value">23.4%</div>
-          <div class="component-sensor-other">
-            <div class="component-sensor-min">0.1%</div>
-            <div class="component-sensor-max">56.7%</div>
-          </div>
-        </div>
-
-        <div class="component-sensor">
-          <div class="component-sensor-value">45.6°C</div>
-          <div class="component-sensor-other">
-            <div class="component-sensor-min">2.3°C</div>
-            <div class="component-sensor-max">78.9°C</div>
-          </div>
-        </div>
-
-        <div class="component-sensor">
-          <div class="component-sensor-value">30.1W</div>
-          <div class="component-sensor-other">
-            <div class="component-sensor-min">24.5W</div>
-            <div class="component-sensor-max">68.7W</div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="component">
-      <div class="component-title">RAM</div>
-      <div class="component-sensors">
-        <div class="component-sensor">
-          <div class="component-sensor-value">23.4%</div>
-          <div class="component-sensor-other">
-            <div class="component-sensor-min">0.1%</div>
-            <div class="component-sensor-max">56.7%</div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="component">
-      <div class="component-title">VRAM</div>
-      <div class="component-sensors">
-        <div class="component-sensor">
-          <div class="component-sensor-value">23.4%</div>
           <div class="component-sensor-other">
             <div class="component-sensor-min">0.1%</div>
             <div class="component-sensor-max">56.7%</div>
@@ -98,6 +84,7 @@
         </div>
       </div>
     </section>
+
   </main>
 </body>
 </html>
