adds data update

--- a/app/index.html
+++ b/app/index.html
@@ -13,78 +13,6 @@
   <title>PC Info</title>
 </head>
 <body>
-  <main>
-    <section class="component">
-      <div class="component-title">CPU (AMD Ryzen 7800x)</div>
-      <div class="component-sensors">
-
-        <div class="component-sensor">
-          <div class="component-sensor-vumeter">
-            <div class="component-sensor-vumeter-needle"></div>
-          </div> 
-          <div class="component-sensor-history" id="history">
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-            <div class="component-sensor-history-item"></div>
-          </div>
-          <div class="component-sensor-value">
-            100.0%
-          </div>
-          <div class="component-sensor-other">
-            <div class="component-sensor-min">0.1%</div>
-            <div class="component-sensor-max">56.7%</div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-  </main>
+  <main></main>
 </body>
 </html>
