adds another theme

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,17 @@
   <title>PC Info</title>
 </head>
 <body>
+  <button id="btn-menu" class="btn-menu"></button>
+  <aside class="menu show" id="menu">
+    <label>
+      Select theme
+      <br />
+      <select id="theme-selector">
+        <option value="1">Default</option>
+        <option value="2">Small</option>
+      </select>
+    </label>
+  </aside>
   <main></main>
 </body>
 </html>
