moves menu button

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <button id="btn-menu" class="btn-menu"></button>
-  <aside class="menu show" id="menu">
+  <aside class="menu" id="menu">
     <label>
       Select theme
       <br />
